# pdfff

./: .gitignore  .pre-commit-config.yaml  README.md  config.txt  config.yml  pdfff.spec  setup.cfg  setup.py
.github/workflows/: release.yml
pdfff/: __main__.py  config.yml  create_label_pdf.py  form-formatter.py
pdfff/test/: test_output.py
