[metadata]
description = Automatically fills out PDF forms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bitcastza/form-filler
keywords = pdf form automation
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Legal Industry
    Topic :: Office/Business
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
packages = find:
python_requires = >= 3.10
install_requires =
    fillpdf==0.7.3
    pyaml-env~=1.2.1
    pypdf~=5.4.0
    pytest

[options.entry_points]
console_scripts =
    pdfff = pdfff.__main__:run
